<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <!-- Logo -->
    <View
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/vocasee_logo" />

    <!-- App Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Instruction -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:text="@string/login_instruction"
        android:textSize="16sp"
        android:textColor="@color/gray_light"
        android:gravity="center" />

    <!-- Google Sign In Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/google_signin"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="#318ba2"
        app:cornerRadius="12dp"/>


</LinearLayout>